@@ -12,6 +12,8 @@
 * Fix - Error where url parameters would get cleared on order-pay page if currency switcher block used.
 * Fix - Currency format on order-pay page if currency was changed via switcher.
 * Fix - Do not create WooCommerce Payments Subscriptions when using payment methods other than WooCommerce Payments.
+* Fix - Prevent a race condition leading to duplicate order paid statuses transitions.
+* Fix - 'payment_intent not found' errors when attempting to process the first invoice for a subscription.
 
 = 3.2.3 - 2021-11-01 =
 * Fix - Card fields on checkout not shown when the 'Enable payments via saved cards' setting is disabled.
